test/golden/error.invalid-key.golden
Runtime error: invalid key: number
  ./test/golden/error.invalid-key.jsonnet:1:1-6:1 