test/golden/error.invalid-key.jsonnet
{
  [null] : "null",
  [3 + "3"] : "3 + 3",
  [3 % 3]: function(x) x
}
